ready for release

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,24 +21,34 @@
 
 
     <!-- Favorites Fragment -->
-    <string name="favorites_fragment_title">Favorite Events</string>
+    <string name="favorites_fragment_title">Favorite Meditations</string>
+
+
+    <!-- About GMS Fragment -->
+    <string name="about_gms_title">About GMS</string>
+    <string name="about_gms_content">Global Meditation Scope is the first and largest creative meditation movement on Periscope. Our intention is to use create healing spaces on Periscope for people to reconnect people with their hearts. We are a collaborative of broadcasters who believe in using Periscope to spread love and peace.</string>
+
 
     <!-- Introduction Slides Strings -->
     <string name="page1_title">Welcome to Global Meditation Scope</string>
     <string name="page1_desc">12-13 December, 2015</string>
 
     <string name="page2_title">All of GMS in a single place</string>
-    <string name="page2_desc">Find the GMS hosts and meditations.</string>
+    <string name="page2_desc">Find all the GMS hosts and meditations.</string>
 
-    <string name="page3_title">Find meditation by their categories</string>
+    <string name="page3_title">Find meditation by category</string>
     <string name="page3_desc">All the GMS broadcasts separated into categories.</string>
 
     <string name="page4_title">Favorite broadcasts</string>
-    <string name="page4_desc">Mark broadcasts as favorite and get reminder notification when the broadcasts start.</string>
+    <string name="page4_desc">Mark broadcasts as favorite and keep them at one place.</string>
 
-    <string name="page5_title">Broadcast time in your time zone</string>
+    <string name="page5_title">Broadcast time in local time</string>
     <string name="page5_desc">Broadcast time are automatically converted to your time zone.</string>
 
     <string name="page6_title">Explore, Meditate and Enjoy</string>
     <string name="page6_desc">There\'s a lot to explore.</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
